@@ -46,4 +46,5 @@ max_cuts_root is a parameter
 Print [END] timestamp after updating the parameter scores (and some print statements)
 Provide at least one complete solution.
 --- 4 jan full 1 ---
-Level pscost as branching rule
+Level pscost as branching rule.
+Revert complete solution change.
